Corrected installation of libraries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -240,7 +240,7 @@ ADD_LIBRARY(tiffxx SHARED libtiff/tif_stream.cxx)
 TARGET_LINK_LIBRARIES (tiffxx tiff)
 
 
-INSTALL(TARGETS tiff tiffxx  DESTINATION ${INSTALL_LIB})
+INSTALL(TARGETS tiff tiffxx RUNTIME DESTINATION ${INSTALL_BIN} LIBRARY DESTINATION ${INSTALL_LIB} ARCHIVE DESTINATION ${INSTALL_LIB})
 INSTALL(FILES libtiff/tiff.h libtiff/tiffconf.h libtiff/tiffio.h libtiff/tiffvers.h ${CMAKE_CURRENT_BINARY_DIR}/tif_config.h DESTINATION ${INSTALL_INC})
 
 INSTALL(FILES COPYRIGHT ChangeLog README RELEASE-DATE TODO VERSION DESTINATION ${INSTALL_DATA})
