--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,24 +3,24 @@
 # For details see the COPYRIGHT file distributed with LuaDist.
 # Please note that the package source code is licensed under its own license.
 
-project ( tiff )
+project ( tiff C CXX )
 cmake_minimum_required ( VERSION 2.8 )
 include ( cmake/dist.cmake )
 
-macro ( ADD_PREFIX prefix rootlist )
+macro ( add_prefix prefix rootlist )
 set ( outlist )
 foreach ( root ${${rootlist}} )
 list ( APPEND outlist ${prefix}${root} )
 endforeach ( root )
 set ( ${rootlist} ${outlist} )
-endmacro ( ADD_PREFIX )
+endmacro ( )
 
 # generating config.h file:
 message ( "Configure: libtiff - generating tif_config.h:" )
-include ( CheckIncludeFiles )
 include ( CheckFunctionExists )
-include ( CheckSymbolExists )
+include ( CheckIncludeFiles )
 include ( CheckLibraryExists )
+include ( CheckSymbolExists )
 include ( CheckTypeSize )
 
 set ( CCITT_SUPPORT 1 )
@@ -29,8 +29,7 @@ set ( CXX_SUPPORT 1 )
 set ( DEFAULT_EXTRASAMPLE_AS_ALPHA 1 )
 
 if ( MACOS )
-  # TODO:
-  #SET(HAVE_APPLE_OPENGL_FRAMEWORK 1)
+  #2DO: set ( HAVE_APPLE_OPENGL_FRAMEWORK 1 )
 endif ( )
 
 check_include_files ( assert.h HAVE_ASSERT_H )
@@ -40,19 +39,17 @@ check_function_exists ( floor HAVE_FLOOR )
 check_function_exists ( getopt HAVE_GETOPT )
 
 set ( HAVE_IEEEFP 1 )
-# TODO!!!
+#2DO
 
-#Define to 1 if the system has the type `int16'.
-#undef HAVE_INT16
-
-#Define to 1 if the system has the type `int32'.
-#undef HAVE_INT32
-
-#Define to 1 if the system has the type `int8'.
-#undef HAVE_INT8
+# Define to 1 if the system has the type `int16'.
+# HAVE_INT16
+# Define to 1 if the system has the type `int32'.
+# HAVE_INT32
+# Define to 1 if the system has the type `int8'.
+# HAVE_INT8
 
 check_include_files ( inttypes.h HAVE_INTTYPES_H )
-check_function_exists ( isascii HAVE_ISASCII )
+check_include_files ( isascii HAVE_ISASCII )
 check_function_exists ( lfind HAVE_LFIND )
 
 check_library_exists ( c "" "" HAVE_LIBC )
@@ -68,7 +65,7 @@ check_function_exists ( memset HAVE_MEMSET )
 check_function_exists ( mmap HAVE_MMAP )
 check_function_exists ( pow HAVE_POW )
 
-#Define if you have POSIX threads libraries and header files.
+# Define if you have POSIX threads libraries and header files.
 #undef HAVE_PTHREAD
 
 check_include_files ( search.h HAVE_SEARCH_H )
@@ -89,27 +86,27 @@ check_include_files ( "sys/types.h" HAVE_SYS_TYPES_H )
 check_include_files ( unistd.h HAVE_UNISTD_H )
 check_include_files ( windows.h HAVE_WINDOWS_H )
 
-#Native cpu byte order: 1 if big-endian (Motorola) or 0 if little-endian
-#(Intel)
+# Native cpu byte order: 1 if big-endian (Motorola) or 0 if little-endian
+# (Intel)
 set ( HOST_BIGENDIAN 0 )
 
-#Set the native cpu bit order (FILLORDER_LSB2MSB or FILLORDER_MSB2LSB)
+# Set the native cpu bit order (FILLORDER_LSB2MSB or FILLORDER_MSB2LSB)
 set ( HOST_FILLORDER "FILLORDER_LSB2MSB" )
 
-set ( JPEG_SUPPORT 1 )
+if ( HAVE_JPEG )
+  set ( JPEG_SUPPORT 1 )
+endif ( )
 set ( LOGLUV_SUPPORT 1 )
-
-#Define to the sub-directory in which libtool stores uninstalled libraries.
-#undef LT_OBJDIR
 
 set ( LZW_SUPPORT 1 )
 set ( MDI_SUPPORT 1 )
 set ( NEXT_SUPPORT 1 )
 
-#Define to 1 if your C compiler doesn't accept -c and -o together.
+# Define to 1 if your C compiler doesn't accept -c and -o together.
 #undef NO_MINUS_C_MINUS_O
 
-#Support Old JPEG compresson (read contrib/ojpeg/README first! Compilationfails with unpatched IJG JPEG library)
+# Support Old JPEG compresson (read contrib/ojpeg/README first!
+# Compilation fails with unpatched IJG JPEG library)
 #undef OJPEG_SUPPORT
 
 set ( PACKAGE "tiff" )
@@ -137,25 +134,24 @@ set ( TIME_WITH_SYS_TIME 1 )
 check_symbol_exists ( "struct tm" "sys/time.h" TM_IN_SYS_TIME )
 set ( VERSION "3.8.2" )
 
-#Define to 1 if your processor stores words with the most significant byte first (like Motorola and SPARC, unlike Intel and VAX).
+# Define to 1 if your processor stores words with the most significant byte first
+# (like Motorola and SPARC, unlike Intel and VAX).
 #undef WORDS_BIGENDIAN
 
 set ( X_DISPLAY_MISSING 1 )
 set ( ZIP_SUPPORT 1 )
-#Number of bits in a file offset, on hosts where this is settable.
+# Number of bits in a file offset, on hosts where this is settable.
 #undef _FILE_OFFSET_BITS
 
 # Define for large files, on AIX-style hosts.
 #undef _LARGE_FILES
 
 # Define to empty if `const' does not conform to ANSI C.
-#undef const
+set ( const const )
 
-#Define to `__inline__' or `__inline' if that's what the C compiler
-#calls it, or to nothing if 'inline' is not supported under any name.
-#ifndef __cplusplus
-#undef inline
-#endif
+# Define to `__inline__' or `__inline' if that's what the C compiler
+# calls it, or to nothing if 'inline' is not supported under any name.
+#set ( inline ) # improve?
 
 #Define to `long' if <sys/types.h> does not define.
 #undef off_t
@@ -164,29 +160,31 @@ set ( ZIP_SUPPORT 1 )
 #undef size_t
 
 # all is defined, so generate config.h
-configure_file ( ${CMAKE_CURRENT_SOURCE_DIR}/tif_config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/tif_config.h )
-
+configure_file ( ${CMAKE_CURRENT_SOURCE_DIR}/libtiff/tif_config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/tif_config.h )
+configure_file ( ${CMAKE_CURRENT_SOURCE_DIR}/libtiff/tiffconf.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/tiffconf.h )
 message ( "Configure: libtiff - done." )
-# end of generating tif_config.h file:
-
 add_definitions ( -DHAVE_CONFIG_H )
 
-###########################################################################################
-
 find_package ( ZLIB REQUIRED )
-find_package ( JPEG REQUIRED )
+find_package ( JPEG )
 
-include_directories ( ${ZLIB_INCLUDE_DIR} ${JPEG_INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR} )
+include_directories ( ${ZLIB_INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR} )
+if ( JPEG_FOUND )
+  include_directories ( ${JPEG_INCLUDE_DIR} )
+endif ( )
 
-# libtiff Library
 set ( TIFF_SRCS tif_aux.c tif_close.c tif_codec.c tif_color.c tif_compress.c tif_dir.c 
   tif_dirinfo.c tif_dirread.c tif_dirwrite.c tif_dumpmode.c tif_error.c tif_extension.c 
   tif_fax3.c tif_fax3sm.c tif_flush.c tif_getimage.c tif_jpeg.c tif_luv.c tif_lzw.c 
   tif_next.c tif_ojpeg.c tif_open.c tif_packbits.c tif_pixarlog.c tif_predict.c tif_print.c 
-  tif_read.c tif_strip.c tif_swab.c tif_thunder.c tif_tile.c tif_unix.c tif_version.c 
-  tif_warning.c tif_write.c tif_zip.c )
-
-add_prefix ( "libtiff/" TIFF_SRCS )
+  tif_read.c tif_strip.c tif_swab.c tif_thunder.c tif_tile.c tif_version.c tif_warning.c 
+  tif_write.c tif_zip.c )
+if ( UNIX )
+  list ( APPEND TIFF_SRCS tif_unix.c )
+elseif ( WIN32 )
+list ( APPEND TIFF_SRCS tif_win32.c )
+endif ( )
+add_prefix ( libtiff/ TIFF_SRCS )
 
 if ( NOT WIN32 )
   find_library ( M_LIBRARY NAMES m PATHS /usr/lib /usr/local/lib )
@@ -194,17 +192,24 @@ if ( NOT WIN32 )
     message ( STATUS "math library 'libm' not found - floating point support disabled" )
   endif ( )
 else ( )
-  # not needed on windows
-  set ( M_LIBRARY "" )
+  set ( M_LIBRARY )
 endif ( )
-add_library ( tiff ${TIFF_SRCS} )
-target_link_libraries ( tiff ${ZLIB_LIBRARY} ${JPEG_LIBRARY} ${M_LIBRARY} )
+
+if ( WIN32 )
+  add_definitions ( -DUSE_WIN32_FILEIO )
+endif ( )
+
+add_library ( tiff ${TIFF_SRCS} libtiff/libtiff.def )
+target_link_libraries ( tiff ${ZLIB_LIBRARY} ${M_LIBRARY} )
+if ( JPEG_FOUND )
+  target_link_libraries ( tiff ${JPEG_LIBRARY} )
+endif ( )
 
 add_library ( tiffxx libtiff/tif_stream.cxx )
 target_link_libraries ( tiffxx tiff )
 
 install_library ( tiff tiffxx )
-install_header ( libtiff/tiff.h libtiff/tiffconf.h libtiff/tiffio.h libtiff/tiffvers.h 
-  ${CMAKE_CURRENT_BINARY_DIR}/tif_config.h )
+install_header ( libtiff/tiff.h ${CMAKE_CURRENT_BINARY_DIR}/tiffconf.h libtiff/tiffio.h 
+  libtiff/tiffvers.h ${CMAKE_CURRENT_BINARY_DIR}/tif_config.h )
 install_data ( COPYRIGHT ChangeLog README RELEASE-DATE TODO )
-install_doc ( html )
+install_doc ( html/ )
